# scenario_designer

./: .gitignore  README.md  app.py  catalog.json  parse.py  pyproject.toml  roadmap.md
compiler/: __init__.py  parse.py  simplify_tune_parameters.py
routes/: __init__.py
routes/scenarios/: __init__.py  scenario_name.py
routes/scenarios/scenario_name/: __init__.py  meta_data.py
routes/scenarios/scenario_name/indicators_of_compromise/: __init__.py  indicator.py
routes/scenarios/scenario_name/procedures/: __init__.py  procedure_index.py
scenarios/: ajax_security_team.json  allanite.json  apt12.json  apt18.json  apt19.json  apt28.json  apt29.json  apt29_variant2.json  apt29_variant3.json  apt32.json  apt38.json  apt3_legacy.json  apt41.json  apt_chimera.json  apt_chimera_lfe.json  auto_assess_low.json  auto_assess_medium.json  beaconer.json  bronze_butler.json  bronze_butler_lfe.json  chimera_l_test.json  chimera_m_test.json  chimera_s_test.json  chimera_xs_test.json  chimera_xss_test.json  dc_exploitation.json  discovery_scenario.json  dragonfly.json  gallium.json  gamaredon_group.json  hopi.json  host_based_artifacts.json  lazarus.json  lazarus_lfe.json  leviathan.json  leviathan_legacy.json  leviathan_lfe.json  lte_beaconer.json  lte_dc_exploitation.json  lte_discovery_scenario.json  (+19 more)
static/: styles.css
templates/: base.html  index.html  scenarios.html
templates/icons/: back.html
templates/scenarios/: index.html  scenario_name.html
templates/scenarios/scenario_name/: index.html  meta_data.html
test/: test_parser.py
(+8 files in other folders)
